# BuiliConstruction

./: .dockerignore  .gitattributes  .gitignore  README.md  SECURITY.md
.github/: dependabot.yml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 6f1d1aa941f2_versioned_report_artifacts.py  a6aea4f4210b_initial_production_schema.py  cf5bed103b0a_release_security_hardening.py  d7a8f1c52e31_fixture_asset_registry.py
apps/api/scripts/: bootstrap_database_roles.sql  grant_runtime_database_privileges.sql  prepare_ci_postgres.py
apps/api/src/buili_api/: __init__.py  db.py  demo.py  deps.py  main.py  models.py  routes.py  schemas.py  security.py  worker.py
apps/api/src/buili_api/core/: config.py  errors.py  logging.py
apps/api/src/buili_api/services/: __init__.py  ai.py  audit.py  documents.py  email.py  fixture_assets.py  issues.py  jobs.py  rate_limit.py  report_rendering.py  reports.py  scanner.py  search.py  spatial.py  storage.py
apps/api/tests/: conftest.py  test_api_production_flows.py  test_auth_and_demo.py  test_fixture_assets.py  test_release_auth_hardening.py  test_release_file_scanning.py  test_release_issue_gates.py  test_release_schema_invariants.py  test_report_rendering.py  test_spatial_adapter.py  test_verification_workflow.py
apps/api/tests/integration/: test_postgres_rls.py
buili_demo_evidence/: A1.1-plan-graph.json  CE-007-existing-footing.docx  DR-2026-07-12-daily-report.docx  M1.1-plan-graph.json  P-024-punch-item.docx  README.md  RFI-018-partition-dimension.docx  drawing-set.json  persona.json
buili_spatial/: README.md  __init__.py  alignment.py  analysis.py  cli.py  compare.py  contracts.py  eval_metrics.py  field_capture.py  floorplan_extractor.py  geometry.py  router.py  (+14 more)
(+135 files in other folders)
