[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "buili-api"
version = "0.1.0"
description = "BUILI construction verification API"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.21.0",
  "alembic>=1.16.0",
  "argon2-cffi>=23.1.0",
  "asyncpg>=0.30.0",
  "boto3>=1.39.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "jinja2>=3.1.6",
  "mutagen>=1.47,<2",
  "openai>=1.99.0",
  "opencv-python-headless>=4.10.0.84",
  "numpy>=2.1.0",
  "orjson>=3.10.18",
  "pillow>=11.0.0",
  "PyMuPDF>=1.25.0",
  "pgvector>=0.4.1",
  "pydantic-settings>=2.10.0",
  "PyJWT[crypto]>=2.10.1",
  "pypdf>=5.8.0",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.20",
  "reportlab>=4.4.0",
  "shapely>=2.0.6",
  "sqlalchemy[asyncio]>=2.0.41",
  "structlog>=25.4.0",
  "tenacity>=9.1.2",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "asgi-lifespan>=2.1.0",
  "mypy>=1.15.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]
pdf = ["weasyprint>=65.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/buili_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = ["error"]
markers = [
  "postgres: requires dedicated migrated PostgreSQL API and worker role URLs",
]

[tool.coverage.run]
source = ["buili_api"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "buili_spatial.*"
follow_imports = "skip"
